--- a/lang/es.json
+++ b/lang/es.json
@@ -240,5 +240,6 @@
     "You are receiving this email because we received a password reset request for your account.": "Ha recibido este mensaje porque se solicitó un restablecimiento de contraseña para su cuenta.",
     "You're logged in!": "¡Usted está conectado!",
     "Your email address is unverified.": "Su dirección de correo electrónico no está verificada.",
-    "what do you mind?": "¿Qué estas pensando?"
+    "what do you mind?": "¿Qué estas pensando?",
+    "Chirp Created Successfully!": "¡Chirp creado exitosamente!"
 }
